--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,6 @@ __pycache__
 /examples/models/**/*_INI*
 /examples/models/**/*_parsed*
 /examples/models/lenet5/keras/MegaSim_98.96/
-
+*.h5
+*.npz
 /scripts/scotopic
